--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "test": "node_modules/.bin/karma start test/karma.conf.js"
   },
   "dependencies": {
-    "coffee-script": "~1.6",
     "brunch": "~1.7",
+
+    "coffee-script": "~1.6",
     "javascript-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": ">= 1.0 < 1.8",
+
     "css-brunch": ">= 1.0 < 1.8",
     "stylus-brunch": ">= 1.0 < 1.8",
+
+    "jade-angularjs-brunch": ">= 0.0.1 < 1.5",
+
     "auto-reload-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": ">= 1.0 < 1.8",
     "clean-css-brunch": ">= 1.0 < 1.8",
