--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
         "angular-cookies": "1.2.0-rc.2",
         "angular-route": "1.2.0-rc.2",
         "angular-resource": "1.2.0-rc.2",
-        "angular-animate": "~1.2.0-rc.2"
+        "angular-animate": "~1.2.0-rc.2",
+        "js-base64": "~2.1.2"
     },
     "overrides": {
         "bootstrap": {
