switched to jade-angular 0.0.5 (single file works well)

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ test/test-results.xml
 # Bower stuff.
 bower_components/
 
-
-studytime.manifest
+# Dont copy AppCache manifest
+app/assets/studytime.manifest
