--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "css-brunch": ">= 1.0 < 1.8",
     "stylus-brunch": ">= 1.0 < 1.8",
 
-    "jade-angularjs-brunch": ">= 0.0.1 < 1.5",
+    "jade-angularjs-brunch": "~0.0.5",
+    "jade": "~0.33",
 
     "auto-reload-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": ">= 1.0 < 1.8",
