--- a/bower.json
+++ b/bower.json
@@ -10,14 +10,18 @@
     ],
     "dependencies": {
         "console-polyfill": "~0.1.0",
+
         "bootstrap-stylus": "~3.0",
         "font-awesome": "~3.2.1",
-        "angular": "1.2.0-rc.2",
-        "angular-cookies": "1.2.0-rc.2",
-        "angular-route": "1.2.0-rc.2",
-        "angular-resource": "1.2.0-rc.2",
+
+        "angular": "~1.2.0-rc.2",
+        "angular-cookies": "~1.2.0-rc.2",
+        "angular-route": "~1.2.0-rc.2",
+        "angular-resource": "~1.2.0-rc.2",
         "angular-animate": "~1.2.0-rc.2",
-        "js-base64": "~2.1.2"
+
+        "js-base64": "~2.1.2",
+        "overthrow": "~0.6.5"
     },
     "overrides": {
         "bootstrap": {
