--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,11 @@
         "bootstrap-stylus": "~3.0",
         "font-awesome": "~3.2.1",
 
-        "angular": "~1.2.0-rc.3",
-        "angular-cookies": "~1.2.0-rc.3",
-        "angular-route": "~1.2.0-rc.3",
-        "angular-resource": "~1.2.0-rc.3",
-        "angular-animate": "~1.2.0-rc.3",
+        "angular": "~1.2.0",
+        "angular-cookies": "~1.2.0",
+        "angular-route": "~1.2.0",
+        "angular-resource": "~1.2.0-",
+        "angular-animate": "~1.2.0",
 
         "js-base64": "~2.1.2",
         "overthrow": "~0.6.5"
