--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
         "angular": "~1.2.0",
         "angular-cookies": "~1.2.0",
         "angular-route": "~1.2.0",
-        "angular-resource": "~1.2.0-",
+        "angular-resource": "~1.2.0",
         "angular-animate": "~1.2.0",
 
         "js-base64": "~2.1.2",
