add responsive to group index page

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
         "angular-animate": "~1.2.0",
 
         "js-base64": "~2.1.2",
-        "overthrow": "~0.6.5"
+        "overthrow": "~0.6.5",
+        "underscore": "~1.5.2"
     },
     "overrides": {
         "bootstrap": {
@@ -38,6 +39,9 @@
                 "font/fontawesome-webfont.woff",
                 "font/FontAwesome.otf"
             ]
+        },
+        "underscore": {
+          "main": "underscore-min.js"
         }
     }
 }
