overthrow and non-bounce moved back and improved foxed footer on desktop

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
         "angular-animate": "1.2.1",
 
         "js-base64": "~2.1.2",
-        "underscore": "~1.5.2"
+        "underscore": "~1.5.2",
+        "overthrow-dist": "~0.7.0"
     },
     "overrides": {
         "bootstrap": {
