--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,11 @@
         "bootstrap-stylus": "~3.0",
         "font-awesome": "~4.0.3",
 
-        "angular": "1.2.1",
-        "angular-cookies": "1.2.1",
-        "angular-route": "1.2.1",
-        "angular-resource": "1.2.1",
-        "angular-animate": "1.2.1",
+        "angular": "~1.2.3",
+        "angular-cookies": "~1.2.3",
+        "angular-route": "~1.2.3",
+        "angular-resource": "~1.2.3",
+        "angular-animate": "~1.2.3",
 
         "js-base64": "~2.1.2",
         "underscore": "~1.5.2",
