--- a/app/config/config.coffee.example
+++ b/app/config/config.coffee.example
@@ -1,3 +1,3 @@
-angular.module('app').constant 'config',
+angular.module('app').value 'config',
   apiUrl: 'http://studytime.ftp.sh/api/v2'
-  facultyId: '5290652f743b323d9249db75'
+  facultyId: '529514619197d92f57df1008'
