--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
-  "author": "c58",
-  "name": "StudyTime-client",
-  "description": "Sked of the university",
-  "version": "2.0.0",
-  "homepage": "http://studytime.me",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "scripts": {
-    "start": "node_modules/.bin/brunch watch --server",
-    "test": "node_modules/.bin/karma start test/karma.conf.js"
-  },
-  "dependencies": {
-    "brunch": "=1.7.10",
-    "coffee-script": "~1.6",
-    "javascript-brunch": ">= 1.0 < 1.8",
-    "coffee-script-brunch": ">= 1.0 < 1.8",
-    "css-brunch": ">= 1.0 < 1.8",
-    "stylus-brunch": "git://github.com/proAlexandr/stylus-brunch.git",
-    "webapp-cache-brunch": "git://github.com/c58/webapp-cache-brunch.git",
-    "jade-brunch": "1.8.x",
-    "static-jade-brunch": "1.7.x",
-    "auto-reload-brunch": ">= 1.0 < 1.8",
-    "uglify-js-brunch": ">= 1.0 < 1.8",
-    "clean-css-brunch": ">= 1.0 < 1.8",
-    "bower": "~1.0",
-    "karma": "~0.9.4",
-    "karma-coffee-preprocessor": "~0.0.2",
-    "karma-ng-scenario": "~0.0.2"
-  }
+    "author": "c58",
+    "name": "StudyTime-client",
+    "description": "Sked of the university",
+    "version": "2.1.0",
+    "homepage": "http://studytime.me",
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "engines": {
+        "node": "0.8 || 0.9 || 0.10"
+    },
+    "scripts": {
+        "test": "cake build:test",
+        "start": "brunch watch --server"
+    },
+    "dependencies": {
+        "bower": "~1.0",
+        "brunch": "=1.7.10",
+
+        "coffee-script": "~1.6",
+        "javascript-brunch": ">= 1.0 < 1.8",
+        "coffee-script-brunch": ">= 1.0 < 1.8",
+
+        "css-brunch": ">= 1.0 < 1.8",
+        "stylus-brunch": "git://github.com/proAlexandr/stylus-brunch.git",
+        "webapp-cache-brunch": "git://github.com/c58/webapp-cache-brunch.git",
+
+        "jade-brunch": "1.8.x",
+        "static-jade-brunch": "1.7.x",
+
+        "uglify-js-brunch": ">= 1.0 < 1.8",
+        "clean-css-brunch": ">= 1.0 < 1.8",
+
+        "auto-reload-brunch": ">= 1.0 < 1.8"
+    },
+    "devDependencies": {
+        "karma": "~0.10",
+        "karma-mocha": "~0.1",
+        "karma-safari-launcher": "~0.1",
+        "karma-chrome-launcher": "~0.1",
+        "karma-firefox-launcher": "~0.1",
+        "karma-phantomjs-launcher": "~0.1",
+        "karma-coffee-preprocessor": "~0.1"
+    }
 }
