custom zepto build html5 link moved to React component uploading component initiated

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,6 @@
     ],
     "dependencies": {
         "lodash": "~2",
-        "zepto": "~1",
         "bootstrap-stylus": "~3.0",
         "backbone": "~1",
         "overthrow-dist": "~0.7.0",
@@ -22,8 +21,7 @@
         "backbone": {
             "main": "backbone.js",
             "dependencies": {
-                "lodash": "*",
-                "zepto": "*"
+                "lodash": "*"
             }
         },
         "lodash": {
