--- a/package.json
+++ b/package.json
@@ -17,19 +17,16 @@
     },
     "dependencies": {
         "bower": "~1.0",
-        "brunch": "=1.7.10",
-
+        "brunch": "git://github.com/brunch/brunch.git",
+        "express": "3.x",
         "coffee-script": "~1.6",
         "javascript-brunch": ">= 1.0 < 1.8",
         "coffee-script-brunch": ">= 1.0 < 1.8",
-
         "css-brunch": ">= 1.0 < 1.8",
         "stylus-brunch": "git://github.com/proAlexandr/stylus-brunch.git",
         "webapp-cache-brunch": "git://github.com/c58/webapp-cache-brunch.git",
-
         "uglify-js-brunch": ">= 1.0 < 1.8",
         "clean-css-brunch": ">= 1.0 < 1.8",
-
         "auto-reload-brunch": ">= 1.0 < 1.8"
     },
     "devDependencies": {
