--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "dependencies": {
         "bower": "~1.0",
-        "brunch": "git://github.com/brunch/brunch.git",
+        "brunch": "=1.7.10",
         "express": "3.x",
         "coffee-script": "~1.6",
         "javascript-brunch": ">= 1.0 < 1.8",
